Fixed Scrollbar Bug and Added Analytics Back

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -15,6 +15,11 @@ html, body {
     -ms-user-select: none;
 }
 
+.hide-scrollbar {
+    overflow: hidden;
+}
+  
+
 ul {
     padding: 0;
     margin: 0;
